--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ figure {
   text-transform: uppercase;
   background-color: #f2f2f2;
   border: 2px solid #f2f2f2;
-	color: bloack;
+	color: black;
 	min-height: 26px;
 }
 
